Folder Model: Handle invalid URL in desktop file

There's no point in handling an invalid URL, and
KProtocolInfo asserts that the scheme is not empty.

BUG: 482889


(cherry picked from commit 0504f0e0ef2b0ebc4f1b1faa9ee8c74d2191931b)